--- a/conf.yaml
+++ b/conf.yaml
@@ -18,9 +18,9 @@ fileMax:
   dynamicFileMax: 50 << 20
 
 ##文件存储路径
-path:
-  VideoPath: "dynamic"
-  FilePath: "static"
+
+VideoPath: "./dynamic"
+FilePath: "./static"
 
 #redis连接配置
 redis:
@@ -36,20 +36,20 @@ redis:
 mysql:
   username: "root"
   password: "123456"
-  host: "192.168.245.22"
+  host: "192.168.245.33"
   port: "3306"
   database: "test_go"
   charset: "utf8mb4"
   timeout: "10"
 
 #casbin
-casbin:
-  type: mysql
+cabin:
+  type: "mysql"
   username: "root"
   password: "123456"
-  host: "192.168.245.33"
+  host: "192.168.245.11"
   port: "3306"
-  database: "casbin"
+  database: "cabin"
   exist: false
 
 #rabbitmq example:"amqp://guest:guest@192.168.245.33:5672/"
@@ -73,5 +73,11 @@ click:
   password: "123456"
 
 language: "zh"
+
+captcha:  "captcha:"
+CaptchaExp: 1
+
+adminExp: 7
+userExp: 3
 #oracle
 #oracle: ["system/system@192.168.245.22:1521/XE"]
