--- a/auth_model.conf
+++ b/auth_model.conf
@@ -4,8 +4,15 @@ r = sub, obj, act
 [policy_definition]
 p = sub, obj, act
 
+[role_definition]
+g = _, _
+g2 = _, _
+
 [policy_effect]
 e = some(where (p.eft == allow))
 
 [matchers]
-m = r.sub == p.sub && r.obj == p.obj && r.act == p.act
+#m = (g(r.sub, p.sub) || g2(r.obj, p.obj) || p.sub == "*")  && keyMatch(r.obj, p.obj) && (r.act == p.act || p.act == "*") ||r.sub == "superAdmin"
+m =  g(r.sub, p.sub) && g2(r.obj, p.obj) && keyMatch(r.obj, p.obj) && regexMatch(r.act, p.act)  || r.sub == "root"
+
+#m = r.sub == p.sub && r.act == p.act
